--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ body {
 #jeu {
   position: relative;
   width: 800px;
-  height: 600px;
+  height: 700px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-self: center;
   background-color: #0f1b40;
@@ -35,31 +36,32 @@ body {
 
 h1 {
   font-family: "osaka";
-  font-size: 88px;
-  background-color: #0f1b40;
+  font-size: 80px;
+  text-align: center;
+  position: relative;
+  top: -75px;
+  left: 0;
+  right: 0;
 }
 
-#titre {
-  position: absolute;
-  top: -50px;
-}
-
-.chapitre {
+#chapitre {
   width: 100%;
   font-size: 48px;
   text-align: center;
   position: absolute;
   top: 50px;
   color: #bf1a0b;
-  background-color: #0f1b40;
 }
 
 #image-album {
-  width: 80%;
-  height: 80%;
+  position: relative;
+  top: -180px;
+  width: 100%;
+  height: 30%;
+  object-fit: contain;
 }
 
-#chapeau {
+#text {
   font-size: 24px;
   color: #f27b13;
   align-self: center;
@@ -67,20 +69,21 @@ h1 {
   display: block;
   height: 50%;
   position: relative;
-  top: 50px;
+  top: -100px;
   margin-right: 20px;
 }
 
 .btn-pg1 {
   position: absolute;
+  bottom: 50px;
   display: flex;
   justify-content: space-around;
   width: 100%;
-  align-self: flex-end;
+  align-self: center;
 }
 
 .btn {
-  width: 150px;
+  width: 175px;
   height: 100px;
   position: relative;
   border-radius: 20px;
