--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ h1 {
   position: absolute;
   top: 50px;
   color: #bf1a0b;
+  align-self: center;
 }
 
 #image-album {
@@ -70,7 +71,6 @@ h1 {
   height: 50%;
   position: relative;
   top: -100px;
-  margin-right: 20px;
 }
 
 .btn-pg1 {
