--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,21 +49,22 @@ h1 {
   font-size: 48px;
   text-align: center;
   position: absolute;
-  top: 50px;
+  top: 30px;
   color: #bf1a0b;
   align-self: center;
 }
 
-#image-album {
+.media {
   position: relative;
-  top: -180px;
-  width: 100%;
-  height: 30%;
-  object-fit: contain;
+  top: -100px;
+  width: 80%;
+  height: auto;
+  object-fit: cover;
+  align-self: center;
 }
 
 #text {
-  font-size: 24px;
+  font-size: 20px;
   color: #f27b13;
   align-self: center;
   text-align: center;
@@ -75,7 +76,7 @@ h1 {
 
 .btn-pg1 {
   position: absolute;
-  bottom: 50px;
+  bottom: 20px;
   display: flex;
   justify-content: space-around;
   width: 100%;
@@ -83,8 +84,8 @@ h1 {
 }
 
 .btn {
-  width: 175px;
-  height: 100px;
+  width: 200px;
+  height: 75px;
   position: relative;
   border-radius: 20px;
   background-color: #1f64bf;
